* Sat Oct 18 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.4
- support for keeping screen on for Sailfish OS
 - enabled by default
 - can be turned on/off in Options->UI
- fully asynchronous Qt 5 GUI startup
 - the Qt 5 GUI startup should now be faster and feedback is provided to the user during the whole startup
 - the Bitcon button now works again in the Qt 5 GUI
- the Gratipay donation button has been added to the Qt 5 GUI
- fixed sizes & font sizes of donation buttons
- modRana now supports log file compression with gzip
 - preliminary testing shows about 60% log size reduction when enabled :) 
 - GTK GUI: Options->Debug->Logging
 - Qt 5 GUI: Options->Logging
- print full path to the log file when disabling it
- average speed is now displayed correctly
- add support for passing CLI arguments when using the Qt 5 GUI
- the compass rose in Qt 5 GUI no longer wiggles when pointing close to the northern direction
- fix shutdown handler not triggering on Sailfish OS
- fix Qt GUI log and Qt 5 GUI qml log names
- fix speed statistics centering in Qt 5 GUI
- fix version string wrapping in Qt 5 GUI
* Wed Oct 08 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.3
- add a map screen compass rose
 - it can be turned on/off and its opacity changed in Options->UI
* Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.2
- remove a file breaking build
* Sun Oct 05 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.1
- use the Python logging module for all logging in modRana
 - so we now have nice logging levels, module indicators and messages from threads look nice :)
 - also the log file has timestamps and does not mis any early log messages
 - unlike before, log messages are both in log file _and_ in console
 - and the Qt 5 GUI even forwards all log messages to the Python log :)
 - the log file can be enabled and disabled from the Qt 5 GUI
 - there is also full path to the log displayed in the Qt 5 GUI