@@ -1,3 +1,11 @@
+* Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
+- generate correct (Python 3.4) bytecode for the Sailfish OS package
+ - makes modRana Python part startup almost 2 times faster (~3.8s->~2s) ! :)
+- make location and map page in Qt 5 GUI asynchronous
+ - this should make the startup even faster and more seemless
+- add a fade in & out animation for the startup indicator in Qt 5 GUI
+* Sun Oct 19 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.5
+- fix a typo breaking modRana startup on Sailfish OS
 * Sat Oct 18 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.4
 - support for keeping screen on for Sailfish OS
  - enabled by default
